<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_height="fill_parent"
			android:layout_width="fill_parent">
	<LinearLayout android:padding="5dip"
				  android:layout_width="fill_parent"
				  android:layout_height="fill_parent"
				  android:orientation="vertical">
		<TextView android:layout_width="fill_parent"
					  android:layout_height="wrap_content"
					  android:text="@string/choose_file"/>
		
		<LinearLayout android:layout_marginTop="5dip"
					  android:layout_width="fill_parent"
					  android:layout_height="wrap_content"
					  android:orientation="horizontal">
			<Button android:id="@+id/browse_button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/browse" />
            
            <EditText android:id="@+id/path_box"
				  android:layout_height="wrap_content"
				  android:layout_width="fill_parent"
				  android:singleLine="true" />
		</LinearLayout>
		
		
		<TextView android:layout_width="fill_parent"
					  android:layout_height="wrap_content"
					  android:text="@string/choose_color"/>
		<RadioGroup android:layout_marginTop="5dip"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:orientation="horizontal">
			<ImageButton android:id="@+id/image_button_1"
						 android:layout_height="wrap_content"
						 android:layout_width="wrap_content"
						 android:src="@drawable/color_1"
						 android:gravity="center_horizontal">
						 
			</ImageButton>
			
			<ImageButton android:id="@+id/image_button_2"
						 android:layout_height="wrap_content"
            			 android:layout_width="wrap_content"
						 android:src="@drawable/color_2"
						 android:gravity="center_horizontal">
            </ImageButton>
			
			<ImageButton android:id="@+id/image_button_3"
						 android:layout_height="wrap_content"
						 android:layout_width="wrap_content"
						 android:src="@drawable/color_3"
						 android:gravity="center_horizontal">
            </ImageButton>
            
            <Button android:id="@+id/other_button"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:text="@string/other"
					android:gravity="center_horizontal|center_vertical">
            </Button>
        </RadioGroup>
	    
	    <TextView android:text="@string/choose_speed"
	    		  android:layout_height="wrap_content"
	    		  android:layout_width="wrap_content">
		</TextView>
		
		<LinearLayout android:layout_marginTop="5dip"
					  android:layout_width="fill_parent"
					  android:layout_height="wrap_content"
					  android:orientation="horizontal">
			<ImageButton android:layout_height="wrap_content"
						 android:src="@drawable/button_minus"
						 android:layout_width="wrap_content"
						 android:id="@+id/minus_button"
						 android:gravity="right">
			</ImageButton>
			
			<EditText android:text="@string/default_speed"
					  android:layout_height="wrap_content"
					  android:layout_width="120dp"
					  android:id="@+id/speed_box"
					  android:singleLine="true"
					  android:gravity="center_horizontal">
			</EditText>
			
			<ImageButton android:src="@drawable/ic_menu_add"
						 android:id="@+id/plus_button"
						 android:layout_height="wrap_content"
						 android:layout_width="wrap_content"
						 android:gravity="left">
			</ImageButton>
		</LinearLayout>
		
		<TextView android:text="@string/choose_num_words"
				  android:layout_height="wrap_content"
				  android:layout_width="wrap_content">
		</TextView>
		
		<LinearLayout android:layout_marginTop="5dip"
					  android:layout_width="fill_parent"
					  android:layout_height="wrap_content"
					  android:orientation="horizontal">
			<ImageButton android:layout_height="wrap_content"
						 android:src="@drawable/button_minus"
						 android:layout_width="wrap_content"
						 android:id="@+id/words_minus_button"
						 android:gravity="right">
			</ImageButton>
			
			<EditText android:text="@string/default_num_words"
					  android:layout_height="wrap_content"
					  android:layout_width="120dp"
					  android:id="@+id/num_words_box"
					  android:singleLine="true"
					  android:gravity="center_horizontal">
			</EditText>
			
			<ImageButton android:src="@drawable/ic_menu_add"
						 android:id="@+id/words_plus_button"
						 android:layout_height="wrap_content"
						 android:layout_width="wrap_content"
						 android:gravity="left">
			</ImageButton>
		</LinearLayout>

		<TextView android:text="@string/choose_num_chars"
				  android:layout_height="wrap_content"
				  android:layout_width="wrap_content">
		</TextView>

		<LinearLayout android:layout_marginTop="5dip"
					  android:layout_width="fill_parent"
					  android:layout_height="wrap_content"
					  android:orientation="horizontal">
			<ImageButton android:layout_height="wrap_content"
						 android:src="@drawable/button_minus"
						 android:layout_width="wrap_content"
						 android:id="@+id/chars_minus_button"
						 android:gravity="right">
			</ImageButton>
			
			<EditText android:text="@string/default_num_words"
					  android:layout_height="wrap_content"
					  android:layout_width="120dp"
					  android:id="@+id/num_chars_box"
					  android:singleLine="true"
					  android:gravity="center_horizontal">
			</EditText>
			
			<ImageButton android:src="@drawable/ic_menu_add"
						 android:id="@+id/chars_plus_button"
						 android:layout_height="wrap_content"
						 android:layout_width="wrap_content"
						 android:gravity="left">
			</ImageButton>
		</LinearLayout>
		
		<Button android:id="@+id/go_button"
				android:layout_marginTop="5dip"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:text="@string/go">
		</Button>
	</LinearLayout>
</ScrollView>